--- a/index.html
+++ b/index.html
@@ -1,42 +1,52 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hussains Website</title>
- </head>
- <body>
-
+    <title> Hussains Resume</title>
+</head>
+<body>
     <h1>Hussain Taheri</h1>
-    <h1>I am a Web Developer</h1>
+    <img src = "./Hussain.JPG" height = "200" alt = "Picture of Hussain">
+    <p>
+        (C) 561-921-7062 | hussaint786@icloud.com | Based in Palm Beach, FL.
+    </p>
     <hr/>
+    <ul>
+        <p>
+            <li>
+                <h2>Objective</h2>
+            </li>
+            I am an dedicated individual with a strong academic performance,<br/>that continues to seek to opportunities to contribute and learn professionally.
+        </p>
+        <hr/>
+        <p>
+            <li>
+                <h2>Education</h2>
+            </li>
+            John I Leonard High School<br/>GPA: 4.76<br/>Class Rank: 6%<br/><br/>Bacholers Degree<br/>University of Florida<br/>Expected 2027
+        </p>
+        <hr/>
+        <p>
+            <li>
+                <h2>Skills</h2>
+            </li>
+            Proficient in Python, html<br/>Strong communication and interpersonal skills<br/> Quick learner and adaptable
+        </p>
+        <hr/>
+        <p>
+            <li>
+                <h2>Additional Information</h2>
+            </li>
+            I've been going to the gym for five days a week and tracking my macros for almost three years now.<br/>
+            I'm ready to put this consistent effort into my professional carrer.<br/> 
+            I been so caught up on wanting to get perfect grades that I excluded how important taking the time to code.
+        </p>
+    </ul>
+    <hr/>
+    <a href = "https://github.com/htaheri17">GitHub</a>
+    <a href = "https://www.linkedin.com/in/hussain-taheri-448a81309/">LinkedIn</a>
 
-<h2><a href = "./public/movie-ranking.html">Movie Ranking Project</a></h2>
-<img src = "./assets/images/movie-ranking.png" height= "200" alt = "Movie Rankings"/>
-
-<h2><a href = "./public/birthday-invite.html">Birthday Invite Project</a></h2>
-<img src = "./assets/images/birthday-invite.png" height = "200" alt = "Birthday Invite"/>
-<hr/>
-
-<p>
-    <a href = "./public/about.html">About</a> 
-    <a href = "./public/contact.html"> Contact Us</a>
-</p>
-
- </body>
- </html>
+    
+</body>
+</html>
